<?xml version="1.0" encoding="utf-8"?>
<!--
/*  
 *  Copyright 2012 Mark Adamson
 *  
 *  This file is part of Monitor Lizard.
 * 
 *  Monitor Lizard is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  Monitor Lizard is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with Monitor Lizard.  If not, see <http://www.gnu.org/licenses/>.
 */
  -->
<resources>
    <string name="app_name">Monitor Lizard Live Wallpaper FREE</string>
    <string name="description">Displays your system stats as a self-playing game of Snake</string>
    <string name="settings_title">Monitor Lizard Settings</string>
    <string name="wallpaper_name">Monitor Lizard FREE</string>
    <string name="settings_category_system">System Settings</string><string name="poll_frequency_setting">System Poll Frequency</string>
    <string name="poll_frequency_setting_desc">How often to query the system for new data</string>
    <string name="settings_category_snake">Snake Settings</string><string name="snake_colour_setting">Snake Colour</string>
    <string name="snake_colour_setting_desc">What colour to draw the snake</string>
    
    
    <string name="snake_speed_setting">Snake Speed</string>
    <string name="snake_speed_setting_desc">What system value should be used for the snake\'s speed</string>
    <string name="snake_length_setting">Snake Length</string>
    <string name="snake_length_setting_desc">What system value should be used for the snake\'s length</string>
    <string name="invert_speed_setting">Invert Snake Speed</string>
    <string name="invert_speed_setting_desc">Make a higher system value produce a slower snake</string>

</resources>