<?xml version="1.0" encoding="utf-8"?>
<!--
/*  
 *  Copyright 2012 Mark Adamson
 *  
 *  This file is part of Monitor Lizard.
 * 
 *  Monitor Lizard is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  Monitor Lizard is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with Monitor Lizard.  If not, see <http://www.gnu.org/licenses/>.
 */
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:cmwmobile="http://schemas.android.com/apk/res/com.cmwmobile.android.samples"
        android:title="@string/settings_title"
        android:key="snakemon_settings">

	<PreferenceCategory
	    android:title="@string/settings_category_system">
    <ListPreference
        	android:key="poll_frequency"
        	android:title="@string/poll_frequency_setting"
        	android:summary="@string/poll_frequency_setting_desc"
        	android:entries="@array/poll_frequencies"
        	android:entryValues="@array/poll_frequency_values" />
	    
	</PreferenceCategory>
	<PreferenceCategory
	    android:title="@string/settings_category_snake">
    <com.markadamson.snakemon.free.AmbilWarnaPreference
		android:key="snake_colour"
		android:title="@string/snake_colour_setting"
		android:summary="@string/snake_colour_setting_desc"/>
    <ListPreference
        android:key="snake_speed"
        android:title="@string/snake_speed_setting"
        android:summary="@string/snake_speed_setting_desc"
        android:entries="@array/system_value_choices"
        android:entryValues="@array/system_value_choice_values"/>
    <CheckBoxPreference
        android:key="invert_speed"
        android:title="@string/invert_speed_setting"
        android:summary="@string/invert_speed_setting_desc"/>
    <ListPreference
        android:key="snake_length"
        android:title="@string/snake_length_setting"
        android:summary="@string/snake_length_setting_desc"
        android:entries="@array/system_value_choices"
        android:entryValues="@array/system_value_choice_values"/>
	</PreferenceCategory>
</PreferenceScreen>